# goaly

./: .eslintrc  .gitignore  LICENSE  README.md  db.json  package-lock.json  package.json
goaly-api/: .flaskenv  .gitignore  Dockerfile  pyproject.toml  requirements.txt
goaly-api/api/: api.py  api_helpers.py  wsgi.py
goaly-api/api/db/: schema.py
goaly-api/aws_deploy/: Dockerrun.aws.json
goaly-api/aws_deploy/.ebextensions/: 99datadog.config  get_db_certif.config
goaly-api/config/: dev.ini  prod.ini
goaly-api/devlocal/: docker-compose.yml
goaly-api/goaly_api/: api.py  wsgi.py
goaly-api/tests/: test_goaly_api.py
public/: index.html
src/: App.tsx  index.tsx  quickdraw.js  setupProxy.js  setupProxy.ts  store.ts
src/components/: CheckInForm.tsx  CompleteTaskForm.tsx  CompletedTasks.tsx  GoalyAppBar.tsx  Task.tsx  TaskElement.tsx  TaskForm.tsx  TaskList.tsx  calendar.tsx  completeTask.tsx  completedTasks.tsx  taskForm.tsx
src/components/completedTasks/: CalendarDay.tsx  CalendarGrid.tsx  CalendarWeek.tsx
src/hooks/: useField.ts
src/reducers/: calendarReducer.ts  completedTasksReducer.ts  loadingReducer.ts  tasksReducer.ts
src/services/: calendar.ts  completedTasks.ts  completedTasksService.ts  tasksService.ts
src/styles/: theme.ts
src/types/: calendar.ts  completedTask.ts  task.ts
src/utils/: calendarUtils.ts  commonUtils.ts  dateUtils.ts  dateUtils.tsx
