[tool.poetry]
name = "goaly-api"
version = "0.1.0"
description = ""
authors = ["Matias Dwek <matiasdwek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
ddtrace = "^1.12.0"
psycopg = "^3.1.8"
psycopg-binary = "^3.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.10.0", python = ">=3.10"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
